--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -74,7 +74,7 @@ span {
   font-size: 1.5rem;
   border: 2px solid black;
   border-radius: 0.75rem;
-  transition: color 250ms ease-out, transform 100ms ease-in;
+  transition: color 250ms ease-out, transform 10ms ease-out;
 }
 
 .btn:hover {
@@ -109,8 +109,8 @@ span {
 .heart {
   width: 100%;
   height: auto;
-  margin: 3rem 6rem;
-  position: inherit;
+  margin: 3rem 6rem 0rem 6rem;
+  position: relative;
   -webkit-animation: throb 2.3s ease-out infinite;
 }
 
@@ -123,21 +123,26 @@ span {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 75%;
+  width: auto;
 }
 
 .b {
   width: 30%;
   height: auto;
+  transform: translateX(300%);
 }
 
 .banim {
-  animation: bsing 4s linear;
+  -webkit-animation: bwalk 3s 500ms ease-in forwards;
 }
 
-@keyframes bsing {
-  0% {transform: translate(100%, 0%);}
-  25% {transform: translate(75%, -7%);}
-  50% {transform: translate(50%, 0%);}
-  75% {transform: translate(25%, -12%);}
+@-webkit-keyframes bwalk {
+  0% {transform: translate(300%, 0%);}
+  70% {transform: translate(75%, -7%);}
+  77% {transform: translate(50%, 0%);}
+  84% {transform: translate(25%, -7%);}
+  91% {transform: translate(10%, 0%);}
+  95% {transform: translate(5%, -7%);}
   100% {transform: translate(0%, 0%);}
 }
