--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,8 +13,8 @@ background-image: repeating-radial-gradient(farthest-corner at 50% -500px,black 
 
 body {
   margin: 0px;
-  width: 100%;
-  height: auto;
+  width: 1200px%;
+  height: 735px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -26,11 +26,22 @@ body {
 -ms-user-select: none; /* IE10+ */
 }
 
+.happytext {
+  text-align: center;
+  font-size: 8rem;
+  font-family: 'Gloria Hallelujah', cursive;
+  position: relative;
+  color: black;
+  margin-top: 13rem;
+  position: fixed;
+  z-index: 10;
+  display: none;
+}
+
 .container {
   width: 75%;
   height: auto;
   bordr: 2px solid black;
-  margin-top: 5rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -107,9 +118,9 @@ span {
 }
 
 .heart {
-  width: 100%;
+  width: 75%;
   height: auto;
-  margin: 3rem 6rem 0rem 6rem;
+  margin: 0rem 6rem 0rem 6rem;
   position: relative;
   -webkit-animation: throb 2.3s ease-out infinite;
 }
@@ -121,7 +132,7 @@ span {
 
 .animated {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;;
   align-items: center;
   height: 75%;
   width: auto;
@@ -133,8 +144,18 @@ span {
   transform: translateX(300%);
 }
 
+.g {
+  width: 40%;
+  height: auto;
+  transform: translateX(-250%);
+}
+
 .banim {
   -webkit-animation: bwalk 3s 500ms ease-in forwards;
+}
+
+.ganim {
+  -webkit-animation: gwalk 3s ease-in forwards;
 }
 
 @-webkit-keyframes bwalk {
@@ -144,5 +165,15 @@ span {
   84% {transform: translate(25%, -7%);}
   91% {transform: translate(10%, 0%);}
   95% {transform: translate(5%, -7%);}
+  100% {transform: translate(0%, 0%);}
+}
+
+@-webkit-keyframes gwalk {
+  0% {transform: translate(-250%, 0%);}
+  70% {transform: translate(-75%, -7%);}
+  77% {transform: translate(-50%, 0%);}
+  84% {transform: translate(-25%, -7%);}
+  91% {transform: translate(-10%, 0%);}
+  95% {transform: translate(-5%, -7%);}
   100% {transform: translate(0%, 0%);}
 }
